fixed backend gestionCours
