# gestioncours/spring-server/src/main/java/ch/heigvd/amt/gestioncours/repositories/LaboRepository.java
@@ -4,6 +4,5 @@ import ch.heigvd.amt.gestioncours.api.model.Labo;
 import ch.heigvd.amt.gestioncours.entities.LaboEntity;
 import org.springframework.data.repository.CrudRepository;
 
-public interface LaboRepository extends CrudRepository<LaboEntity, String> {
-    public LaboEntity findByLaboName(String laboName);
+public interface LaboRepository extends CrudRepository<LaboEntity, Long> {
 }
