# gestioncours/spring-server/src/main/resources/api-spec.yaml
@@ -157,7 +157,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/EnrollmentList'
+                  $ref: '#/components/schemas/Enrollment'
         '401':
           description: unexpected error
 
@@ -266,15 +266,36 @@ paths:
                   $ref: '#/components/schemas/Labo'
         '401':
           description: unexpected error
+  /labos/{id}:
+    get:
+      description: Returns an labo based on a single ID
+      operationId: get labo by id
+      parameters:
+        - name: id
+          in: path
+          description: ID of labo to fetch
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: labo response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Labo'
+        default:
+          description: unexpected error
+
     delete:
-      description: delete a single labo on the name supplied
+      description: delete a single labo on the id supplied
       operationId: deleteLabo
       parameters:
         - in: path
-          name: name
+          name: id
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         '204':
           description: labo deleted
@@ -285,10 +306,10 @@ paths:
       description: update an Labo
       parameters:
         - in: path
-          name: laboName
+          name: id
           required: true
           schema:
-            type: string
+            type: integer
       requestBody:
         required: true
         content:
@@ -328,6 +349,9 @@ components:
         credits_etcs:
           type: integer
           format: int64
+        laboId:
+          type: integer
+          format: int64
     SubjectList:
       allOf:
         - $ref: '#/components/schemas/Subject'
@@ -364,6 +388,9 @@ components:
         - labo_name
         - ponderation
       properties:
+        id:
+          type: integer
+          format: int64
         labo_name:
           type: string
         ponderation:
